Ensure that contact panel doesn't overflow

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1225,6 +1225,10 @@ span.parallaxTitleText {
   span.parallaxTitleText {
     background: none;
   }
+
+  .clear {
+    height: 50px;
+  }
 }
 
 .parallaxAnchor {
